Revamped layout for masonry style

--- a/index.html
+++ b/index.html
@@ -80,32 +80,34 @@
   <!-- Research -->
   <div class="w3-container w3-row-padding">
     <h2 id="research"><b>Research</b></h2>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <div class="w3-container w3-white">
-        <a class="weblink" href="./regularity/"><img src="./images/regularity/hochster.png" alt="hochster" style="width:100%" class="w3-hover-opacity"></a>
-        <p><b>Castelnuovo-Mumford Regularity</b></p>
-        <p>How complicated can the generators and relations of a module be?</p>
+    <div class="masonry">
+      <div class="masonry-item">
+        <div class="w3-container w3-white">
+          <a class="weblink" href="./regularity/"><img src="./images/regularity/hochster.png" alt="hochster" style="width:100%" class="w3-hover-opacity"></a>
+          <p><b>Castelnuovo-Mumford Regularity</b></p>
+          <p>How complicated can the generators and relations of a module be?</p>
+        </div>
       </div>
-    </div>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="./tamari/"><img src="./images/tamari/hasse_123.png" alt="tamari hasse 123" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p><b>Stable Tamari Lattice</b></p>
-        <p>The combinatorics of posets in the stable Tamari lattice.</p>
+      <div class="masonry-item">
+        <a class="weblink" href="./tamari/"><img src="./images/tamari/hasse_123.png" alt="tamari hasse 123" style="width:100%" class="w3-hover-opacity"></a>
+        <div class="w3-container w3-white">
+          <p><b>Stable Tamari Lattice</b></p>
+          <p>The combinatorics of posets in the stable Tamari lattice.</p>
+        </div>
       </div>
-    </div>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <div class="w3-container w3-white">
-        <a class="weblink" href="./lefschetz/"><img src="./images/lefschetz/hypersurface.png" alt="hypersurface" style="width:100%" class="w3-hover-opacity"></a>
-        <p><b>Lefschetz Properties</b></p>
-        <p>When does multiplication by a linear form have full rank in an Artinian algebra?</p>
+      <div class="masonry-item">
+        <div class="w3-container w3-white">
+          <a class="weblink" href="./lefschetz/"><img src="./images/lefschetz/hypersurface.png" alt="hypersurface" style="width:100%" class="w3-hover-opacity"></a>
+          <p><b>Lefschetz Properties</b></p>
+          <p>When does multiplication by a linear form have full rank in an Artinian algebra?</p>
+        </div>
       </div>
-    </div>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="./tda/"><img src="./images/tda/kde.gif" alt="tda" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p><b>Topological Data Analysis</b></p>
-        <p>Use techniques from computational topology to analyze and exploit the shape of data.</p>
+      <div class="masonry-item">
+        <a class="weblink" href="./tda/"><img src="./images/tda/kde.gif" alt="tda" style="width:100%" class="w3-hover-opacity"></a>
+        <div class="w3-container w3-white">
+          <p><b>Topological Data Analysis</b></p>
+          <p>Use techniques from computational topology to analyze and exploit the shape of data.</p>
+        </div>
       </div>
     </div>
   </div>
@@ -114,49 +116,51 @@
   <br>
   <div class="w3-container w3-row-padding">
     <h2 id="software"><b>Software</b></h2>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="https://macaulay2.com/doc/Macaulay2/share/doc/Macaulay2/MatrixSchubert/html/index.html" target="_blank"><img src="./images/matrixschubert/pipe_dream.png" alt="matrixschubert" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p style="font-family: Lucida Console, monospace;"><b>MatrixSchubert</b></p>
-        <p>A Macaulay2 package with functions for investigating ASM and matrix Schubert varieties.</p>
+    <div class="masonry">
+      <div class="masonry-item">
+        <a class="weblink" href="https://macaulay2.com/doc/Macaulay2/share/doc/Macaulay2/MatrixSchubert/html/index.html" target="_blank"><img src="./images/matrixschubert/pipe_dream.png" alt="matrixschubert" style="width:100%" class="w3-hover-opacity"></a>
+        <div class="w3-container w3-white">
+          <p style="font-family: Lucida Console, monospace;"><b>MatrixSchubert</b></p>
+          <p>A Macaulay2 package with functions for investigating ASM and matrix Schubert varieties.</p>
+        </div>
       </div>
-    </div>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="https://github.com/Macaulay2/Workshop-2025-Tulane/tree/YoungTableaux" target="_blank"><img src="./images/tableaux.png" alt="tableaux" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p style="font-family: Lucida Console, monospace;"><b>YoungTableaux</b></p>
-        <p>A Macaulay2 package implementing Young diagrams and tableaux.</p>
+      <div class="masonry-item">
+        <a class="weblink" href="https://github.com/seangrate/MinimalOutNeighborhoods" target="_blank"><img src="./images/out-neighborhoods/open_r-2.png" alt="out-neighborhoods" style="width:100%" class="w3-hover-opacity"></a>
+        <div class="w3-container w3-white">
+          <p><b>Minimal Out-Neighborhoods</b></p>
+          <p>Python scripts for computing minimal out-neighborhoods (and some statistics) in the \( F \)-lattice.</p>
+        </div>
       </div>
-    </div>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="https://github.com/seangrate/CAAT" target="_blank"><img src="./images/caat/alignment_7.png" alt="caat" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p><b>CAAT</b></p>
-        <p>A tool to help analyze course alignment.</p>
+      <div class="masonry-item">
+        <a class="weblink" href="https://macaulay2.com/doc/Macaulay2/share/doc/Macaulay2/Permutations/html/index.html" target="_blank"><img src="./images/permutations.png" alt="permutations" style="width:100%" class="w3-hover-opacity"></a>
+        <div class="w3-container w3-white">
+          <p style="font-family: Lucida Console, monospace;"><b>Permutations</b></p>
+          <p>A Macaulay2 package implementing permutations.</p>
+        </div>
       </div>
-    </div>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="https://macaulay2.com/doc/Macaulay2/share/doc/Macaulay2/Permutations/html/index.html" target="_blank"><img src="./images/permutations.png" alt="permutations" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p style="font-family: Lucida Console, monospace;"><b>Permutations</b></p>
-        <p>A Macaulay2 package implementing permutations.</p>
+      <div class="masonry-item">
+        <a class="weblink" href="https://github.com/seangrate/CAAT" target="_blank"><img src="./images/caat/alignment_7.png" alt="caat" style="width:100%" class="w3-hover-opacity"></a>
+        <div class="w3-container w3-white">
+          <p><b>CAAT</b></p>
+          <p>A tool to help analyze course alignment.</p>
+        </div>
       </div>
-    </div>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="https://github.com/seangrate/MinimalOutNeighborhoods" target="_blank"><img src="./images/out-neighborhoods/open_r-2.png" alt="out-neighborhoods" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p><b>Minimal Out-Neighborhoods</b></p>
-        <p>Python scripts for computing minimal out-neighborhoods (and some statistics) in the \( F \)-lattice.</p>
+      <div class="masonry-item">
+        <a class="weblink" href="https://github.com/Macaulay2/Workshop-2025-Tulane/tree/YoungTableaux" target="_blank"><img src="./images/tableaux.png" alt="tableaux" style="width:100%" class="w3-hover-opacity"></a>
+        <div class="w3-container w3-white">
+          <p style="font-family: Lucida Console, monospace;"><b>YoungTableaux</b></p>
+          <p>A Macaulay2 package implementing Young diagrams and tableaux.</p>
+        </div>
       </div>
-    </div>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="https://github.com/seangrate/Tropical-Curves" target="_blank"><img src="./images/tropical/tropical_curve.png" alt="tropical-curve" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p><b>Tropical Curves</b></p>
-        <p>Python scripts for visualizing tropical curves.</p>
+      <div class="masonry-item">
+        <a class="weblink" href="https://github.com/seangrate/Tropical-Curves" target="_blank"><img src="./images/tropical/tropical_curve.png" alt="tropical-curve" style="width:100%" class="w3-hover-opacity"></a>
+        <div class="w3-container w3-white">
+          <p><b>Tropical Curves</b></p>
+          <p>Python scripts for visualizing tropical curves.</p>
+        </div>
       </div>
+      <hr>
     </div>
-    <hr>
   </div>
 
     <!-- Publications -->
