--- a/past-projects/index.html
+++ b/past-projects/index.html
@@ -49,25 +49,27 @@
   <!-- Undergraduate Research -->
   <div id="undergrad" class="w3-container w3-row-padding">
     <h4><b>Undergraduate Research</b></h4>
-    <!-- <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="./resampling/"><img src="../images/resampling/plane.gif" alt="resampling" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p><b>Point Cloud Resampling</b></p>
-        <p>Use deep learning to get a better resolution of point cloud data.</p>
+    <div class="masonry">
+      <!-- <div class="masonry-item">
+        <a class="weblink" href="./resampling/"><img src="../images/resampling/plane.gif" alt="resampling" style="width:100%" class="w3-hover-opacity"></a>
+        <div class="w3-container w3-white">
+          <p><b>Point Cloud Resampling</b></p>
+          <p>Use deep learning to get a better resolution of point cloud data.</p>
+        </div>
+      </div> -->
+      <div class="masonry-item">
+        <a class="weblink" href="./heisenberg/"><img src="../images/heisenberg/tetra_growth.gif" alt="heisenberg" style="width:100%" class="w3-hover-opacity"></a>
+        <div class="w3-container w3-white">
+          <p><b>Discrete Heisenberg Group</b></p>
+          <p>How well does Ehrhart theory translate to the noncommutative world?</p>
+        </div>
       </div>
-    </div> -->
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="./heisenberg/"><img src="../images/heisenberg/tetra_growth.gif" alt="heisenberg" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p><b>Discrete Heisenberg Group</b></p>
-        <p>How well does Ehrhart theory translate to the noncommutative world?</p>
-      </div>
-    </div>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="./flight-route/"><img src="../images/flightroute/franklin_torch_flight.gif" alt="flight route" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p><b>Flight Route Estimation</b></p>
-        <p>How well can you estimate the path of a LiDAR sensor given a scan of the terrain?</p>
+      <div class="masonry-item>
+        <a class="weblink" href="./flight-route/"><img src="../images/flightroute/franklin_torch_flight.gif" alt="flight route" style="width:100%" class="w3-hover-opacity"></a>
+        <div class="w3-container w3-white">
+          <p><b>Flight Route Estimation</b></p>
+          <p>How well can you estimate the path of a LiDAR sensor given a scan of the terrain?</p>
+        </div>
       </div>
     </div>
     <hr>
@@ -76,25 +78,27 @@
   <!-- Projects -->
   <div id="personal" class="w3-container w3-row-padding">
     <h4 id="personal projects"><b>Personal Projects</b></h4>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="./visualizations/"><img src="../images/visualizations/twisted_cubic_surface_render.png" alt="twisted cubic" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p><b>Visualizing Algebraic Surfaces</b></p>
-        <p>Cool 3D prints of objects popping up in math.</p>
+    <div class="masonry">
+      <div class="masonry-item>
+        <a class="weblink" href="./visualizations/"><img src="../images/visualizations/twisted_cubic_surface_render.png" alt="twisted cubic" style="width:100%" class="w3-hover-opacity"></a>
+        <div class="w3-container w3-white">
+          <p><b>Visualizing Algebraic Surfaces</b></p>
+          <p>Cool 3D prints of objects popping up in math.</p>
+        </div>
       </div>
-    </div>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="./assignments/"><img src="../images/assignments/assignments.PNG" alt="assignments" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p><b>TA Assignments</b></p>
-        <p>Is there a nice algorithm to assign TAs to teaching assignments given a set of constraints and a list of preferences?</p>
+      <div class="masonry-item">
+        <a class="weblink" href="./assignments/"><img src="../images/assignments/assignments.PNG" alt="assignments" style="width:100%" class="w3-hover-opacity"></a>
+        <div class="w3-container w3-white">
+          <p><b>TA Assignments</b></p>
+          <p>Is there a nice algorithm to assign TAs to teaching assignments given a set of constraints and a list of preferences?</p>
+        </div>
       </div>
-    </div>
-    <div class="w3-third w3-container">
-      <a class="weblink" href="./minecraft/"><img src="../images/minecraft/mountain overlook (small).png" alt="minecraft" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p><b>Generating Minecraft Worlds</b></p>
-        <p>Use techniques from deep learning combined with real world data to generate realistic worlds in Minecraft.</p>
+      <div class="masonry-item">
+        <a class="weblink" href="./minecraft/"><img src="../images/minecraft/mountain overlook (small).png" alt="minecraft" style="width:100%" class="w3-hover-opacity"></a>
+        <div class="w3-container w3-white">
+          <p><b>Generating Minecraft Worlds</b></p>
+          <p>Use techniques from deep learning combined with real world data to generate realistic worlds in Minecraft.</p>
+        </div>
       </div>
     </div>
   </div>
