Added slide for AWM Research Symposium

--- a/talks/condensed.html
+++ b/talks/condensed.html
@@ -85,6 +85,7 @@
         <q>Combinatorial bounds on the Castelnuovo-Mumford regularity of toric surfaces</q>, AWM Research Symposium
         <span style="float:right">May 2025</span>
         <br>
+        <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="../misc/slides/awm-research-symposium/regularity.pdf" target="_blank">Slides</a> | 
         Abstract
         <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
         <blockquote class="abstract-content">
