Updated future job

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       I earned a B.S. in Mathematics with minors in History and Classics at the University of Kentucky.
       While at the University of Kentucky, I conducted research with the <a class="weblink" href="http://www.ms.uky.edu/~geometrylab/" target="_blank">University of Kentucky Math Lab</a>
       and the <a class="weblink" href="http://mvrl.cs.uky.edu/" target="_blank">Multimodal Vision Research Laboratory</a>.
+      Starting in August 2025, I will be a postdoctoral research associate working with <a class="weblink" href="https://faculty.sites.iastate.edu/jmccullo/" target="_blank"></a>Jason McCullough</a>at Iowa State University.
     </p>
     <p>
       My primary research interests lie in commutative algebra, algebraic geometry, algebraic combinatorics, and data analysis.
