Added slides for SIAM AG25

--- a/talks/condensed.html
+++ b/talks/condensed.html
@@ -72,6 +72,7 @@
         <q>Castelnuovo-Mumford regularity of toric surfaces</q>, SIAM AG25
         <span style="float:right">July 2025</span>
         <br>
+        <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="../misc/slides/siam-ag25/regularity.pdf" target="_blank">Slides</a> | 
         Abstract
         <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
         <blockquote class="abstract-content">
