--- a/talks/index.html
+++ b/talks/index.html
@@ -118,7 +118,7 @@
       city: 'Madison, WI',
       extras: { notes: '', 
                 code: '', 
-                slides: '', 
+                slides: '../misc/slides/siam-ag25/regularity.pdf', 
                 video: '',
                 abstract: 'In 1996, L\'vovsky showed the Castelnuovo-Mumford regularity of the coordinate ring of a monomial curve is bounded by the sum of its semigroup\'s two largest gaps. '
                           + 'We explore analogous results for toric surfaces embedded by incomplete linear systems, and show that for certain classes the regularity is controlled by the combinatorics of the associated semigroup.' } },
