Added thesis defense presentation

--- a/talks/condensed.html
+++ b/talks/condensed.html
@@ -425,6 +425,13 @@
   <p>
     <ul>
       <li>
+        <q>Problems in computational algebraic geometry: Lefschetz properties and toric varieties</q>, Thesis Defense
+        <span style="float:right">July 2025</span>
+        <br>
+        <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="../misc/thesis/presentation.html" target="_blank">Slides</a>
+      </li>
+      <br>
+      <li>
         <q>Boostrapping computations in topological data analysis</q>, COSAM 3-Minute Thesis Competition
         <span style="float:right">April 2024</span>
         <br>
@@ -443,7 +450,6 @@
           A common theme among all these projects is the strong presence (and necessity) of computation.
           As such, there will be many examples written in Macaulay2 and Python to help understand where these projects came from and how they were completed.
         </blockquote>
-        <br>
         <br>
       </li>
     </ul>
