--- a/talks/index.html
+++ b/talks/index.html
@@ -101,7 +101,7 @@
     // timeline data
     const timelineEvents = [
     { title: 'Combinatorial bounds on the Castelnuovo-Mumford regularity of toric surfaces', 
-      date: new Date('2025-05-16'), 
+      date: new Date('2025-07-23'), 
       venue: 'Mathematical Congress of the Americas',
       location: 'University of Miami',
       city: 'Miami, FL',
@@ -111,6 +111,16 @@
                 video: '',
                 abstract: 'In 1996, L\'vovsky showed the Castelnuovo-Mumford regularity of the coordinate ring of a monomial curve is bounded by the sum of its semigroup\'s two largest gaps. '
                           + 'We explore analogous results for toric surfaces embedded by incomplete linear systems, and show that for certain classes the regularity is controlled by the combinatorics of the associated semigroup.' } },
+    { title: 'Problems in computational algebraic geometry: Lefschetz properties and toric varieties', 
+      venue: 'Thesis Defense',
+      date: new Date('2025-07-18'), 
+      location: 'Zoom',
+      city: 'Virtual',
+      extras: { notes: '', 
+                code: '', 
+                slides: '../misc/thesis/presentation.html', 
+                video: '',
+                abstract: '' } },
     { title: 'Castelnuovo-Mumford regularity of toric surfaces', 
       date: new Date('2025-07-08'), 
       venue: 'SIAM AG25',
