--- a/misc/thesis/presentation.html
+++ b/misc/thesis/presentation.html
@@ -7415,7 +7415,6 @@ main {
                     processEnvironments: true
                 },
                 displayAlign: 'center',
-                messageStyle: 'none',
                 CommonHTML: {
                     linebreaks: {
                     automatic: true
@@ -7579,8 +7578,10 @@ The best we can hope for is $\exists \, f \in A$ such that $\cdot f$ is injectiv
 <li>top-heavy theorem</li>
 </ul>
 <h3 id="Commutative-algebra">Commutative algebra<a class="anchor-link" href="#Commutative-algebra">¶</a></h3><ul>
-<li><strong>Conjecture</strong> [Fröberg, 1985]: Suppose $f_1,\dots,f_r \in R = \mathbb{K}[x_1,\dots,x_n]$ are generic forms of degrees $d_1,\dots,d_r$, respectively, and let $I = \langle f_1,\dots,f_r \rangle$. Then $$\text{HS}_{R/I}(t) = \left[ \frac{\prod_{k=1}^r (1 - t^{d_k})}{(1-t)^n} \right],$$
-where $[ \dots ]$ denotes truncation at the first negative terms of the series.</li>
+<li><strong>Conjecture</strong> [Fröberg, 1985]: Suppose $f_1,\dots,f_r \in R = \mathbb{K}[x_1,\dots,x_n]$ are generic forms of degrees $d_1,\dots,d_r$, respectively, and let $I = \langle f_1,\dots,f_r \rangle$. Then $$\text{HS}_{R/I}(t) = \left[ \frac{\prod_{k=1}^r (1 - t^{d_k})}{(1-t)^n} \right],$$</li>
+</ul>
+<p>where $[ \dots ]$ denotes truncation at the first negative terms of the series.</p>
+<ul>
 <li>Growth of Hilbert functions</li>
 </ul>
 </div>
@@ -7594,15 +7595,15 @@ where $[ \dots ]$ denotes truncation at the first negative terms of the series.<
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h2 id="WLP-is-hard">WLP is hard<a class="anchor-link" href="#WLP-is-hard">¶</a></h2><br/>
-<p><strong>Theorem</strong> [Brenner-Kaid, 2010]:
+<p><strong>Theorem</strong> [Brenner-Kaid, 2010]: 
 Let $\text{char}(\mathbb{K}) = 2$. Then $A = \mathbb{K}[x,y,z] / \langle x^d, y^d, z^d \rangle$ has the WLP if and only if $d = \left\lfloor \frac{2^k + 1}{3} \right\rfloor$ for some positive integer $k$.</p>
 <br/>
-<p><strong>Theorem</strong> [Harbourne-Schenck-Seceleanu, 2011]:
+<p><strong>Theorem</strong> [Harbourne-Schenck-Seceleanu, 2011]: 
 Let
 $$ I = \langle L_1^t, \dots, L_n^t \rangle \subset \mathbb{K}[x_1,x_2,x_3,x_4] $$
 with $L_i \in R_1$ generic. If $n \in \{5,6,7,8\}$, then the WLP fails, respectively, for $t \geq \{3,27,140,704\}$.</p>
 <br/>
-<p><strong>Question</strong>:
+<p><strong>Question</strong>: 
 Does every complete intersection in four or more variables have the WLP?</p>
 </div>
 </div>
@@ -7633,7 +7634,7 @@ Then the Artinian reduction $A_X$ does not have the WLP. In particular, if $I$ i
 <p><strong>Example</strong>: $R = \mathbb{K}[x,y,z]$ and $I = \langle x^2, y^2, z^3 \rangle$
 $$0 \leftarrow R/I \leftarrow R \leftarrow \substack{R(-2)^2 \\ \oplus \\ R(-3)} \leftarrow \substack{R(-4) \\ \oplus \\ R(-5)^2} \leftarrow R(-7) \leftarrow 0$$</p>
 <br/>
-<p>$$0 \leftarrow R/I \leftarrow R \leftarrow \substack{R(-(1+1))^2 \\ \oplus \\ R(-(1+2))} \leftarrow \substack{R(-(2+2)) \\ \oplus \\ R(-(2+3))^2} \leftarrow R(-(3+4)) \leftarrow 0$$</p>
+$$0 \leftarrow R/I \leftarrow R \leftarrow \substack{R(-(1+1))^2 \\ \oplus \\ R(-(1+2))} \leftarrow \substack{R(-(2+2)) \\ \oplus \\ R(-(2+3))^2} \leftarrow R(-(3+4)) \leftarrow 0$$
 </div>
 </div>
 </div>
@@ -7831,16 +7832,14 @@ If $A = \mathbb{K}[x_1,\dots,x_{m+n}]/I$ is Artinian with an $(n,d)$-Koszul tail
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h2 id="Lattice-points">Lattice points<a class="anchor-link" href="#Lattice-points">¶</a></h2><p>A set of lattice points, represented as the columns of the $d \times n$ matrix defines a monomial map.</p>
 <p><strong>Example</strong></p>
-<p>$$
+$$
 A = \begin{pmatrix}
           d &amp; d-1 &amp; \dots &amp; 1 &amp; 0 \\
           0 &amp; 1 &amp; \dots &amp; d-1 &amp; d
       \end{pmatrix}
-$$</p>
-<p>$A$ consists of the integral points on the line $x+y=d$ with $x,y \geq 0$.
+$$<p>$A$ consists of the integral points on the line $x+y=d$ with $x,y \geq 0$.
 It defines the monomial curve $C$ given as the image of the map</p>
-<p>$$(s,t) \longmapsto (s^d, s^{d-1} t, \dots, s t^{d-1}, t^d).$$</p>
-<p>The kernel of this map defines the toric ideal $I_C$.</p>
+$$(s,t) \longmapsto (s^d, s^{d-1} t, \dots, s t^{d-1}, t^d).$$<p>The kernel of this map defines the toric ideal $I_C$.</p>
 </div>
 </div>
 </div>
@@ -7851,8 +7850,7 @@ It defines the monomial curve $C$ given as the image of the map</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="Example:-twisted-cubic">Example: twisted cubic<a class="anchor-link" href="#Example:-twisted-cubic">¶</a></h2><p>$$A = \begin{pmatrix} 3 &amp; 2 &amp; 1 &amp; 0 \\ 0 &amp; 1 &amp; 2 &amp; 3 \end{pmatrix}$$</p>
-<p>The monomial curve $C$ is the image of the map $(s,t) \mapsto (s^3, s^2 t, s t^2, t^3)$.
+<h2 id="Example:-twisted-cubic">Example: twisted cubic<a class="anchor-link" href="#Example:-twisted-cubic">¶</a></h2>$$A = \begin{pmatrix} 3 &amp; 2 &amp; 1 &amp; 0 \\ 0 &amp; 1 &amp; 2 &amp; 3 \end{pmatrix}$$<p>The monomial curve $C$ is the image of the map $(s,t) \mapsto (s^3, s^2 t, s t^2, t^3)$.
 Set
 $$x_0 = s^3, \quad x_1 = s^2 t, \quad x_2 = s t^2, \quad x_3 = t^3.$$
 Then
