Added MCA 2025 talk

--- a/talks/condensed.html
+++ b/talks/condensed.html
@@ -59,6 +59,7 @@
         <q>Combinatorial bounds on the Castelnuovo-Mumford regularity of toric surfaces</q>, Mathematical Congress of the Americas
         <span style="float:right">July 2025</span>
         <br>
+        <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="../misc/slides/mca-2025/regularity.pdf" target="_blank">Slides</a> | 
         Abstract
         <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
         <blockquote class="abstract-content">
