Updated with Iowa State information

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </a>
     <img src="./images/me.jpg" style="width:100%;" class="w3-round"><br><br>
     <h4><b>Sean Grate</b></h4>
-    <p class="w3-text-grey">Ph.D. Candidate</p>
+    <p class="w3-text-grey">Postdoctoral Research Associate</p>
   </div>
   <div class="w3-bar-block">
     <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i>ABOUT</a> 
@@ -64,11 +64,10 @@
   <div class="w3-container w3-padding-large w3-row-padding">
     <h2 id="about"><b>About</b></h2>
     <p>
-      I am a fifth-year Ph.D. candidate in Mathematics at Auburn University studying under <a class="weblink" href="http://webhome.auburn.edu/~hks0015/" target="_blank">Hal Schenck</a>.
-      I earned a B.S. in Mathematics with minors in History and Classics at the University of Kentucky.
+      I am a postdoctoral research associate working with <a class="weblink" href="https://faculty.sites.iastate.edu/jmccullo/" target="_blank">Jason McCullough</a> at Iowa State University.
+      I earned a Ph.D. in Mathematics at Auburn University studying under <a class="weblink" href="http://webhome.auburn.edu/~hks0015/" target="_blank">Hal Schenck</a>, and a B.S. in Mathematics with minors in History and Classics at the University of Kentucky.
       While at the University of Kentucky, I conducted research with the <a class="weblink" href="http://www.ms.uky.edu/~geometrylab/" target="_blank">University of Kentucky Math Lab</a>
       and the <a class="weblink" href="http://mvrl.cs.uky.edu/" target="_blank">Multimodal Vision Research Laboratory</a>.
-      Starting in August 2025, I will be a postdoctoral research associate working with <a class="weblink" href="https://faculty.sites.iastate.edu/jmccullo/" target="_blank">Jason McCullough</a> at Iowa State University.
     </p>
     <p>
       My primary research interests lie in commutative algebra, algebraic geometry, algebraic combinatorics, and data analysis.
@@ -289,7 +288,7 @@
         <li>
           <div>
             <span style="display:inline-block; width:50%">Graph Theoretic Reflection to Foster Alignment in Coordinated Courses</span>
-            <span style="float:right; width:30%"><em>Positive referee reports, now in revision</em></span>
+            <span style="float:right; width:30%"><em>Positive referee reports, resubmitted</em></span>
           </div>
           <br>
           <span style="display:inline-block; width:50%"><em>
@@ -321,15 +320,15 @@
   <div class="w3-row-padding">
     <div class="w3-half">
       <h3>Contact</h3>
-      Office: 122H Parker Hall<br>
-      Email: sean.grate@auburn.edu
+      Office: 442 Carver Hall<br>
+      Email: sgrate@auburn.edu
     </div>
     <div class="w3-half">
       <h3>Mailing Address</h3>
       <p>
-        Department of Mathematics and Statistics<br>
-        221 Parker Hall<br>
-        Auburn University, AL 36849<br>
+        Department of Mathematics<br>
+        396 Carver Hall<br>
+        Ames, IA 50011<br>
         USA
       </p>
     </div>
