--- a/past-projects/visualizations/index.html
+++ b/past-projects/visualizations/index.html
@@ -115,22 +115,22 @@
 
   <!-- Footer -->
   <footer class="w3-container w3-padding-32 w3-dark-grey">
-    <div class="w3-row-padding">
-      <div class="w3-half">
-        <h3>Contact</h3>
-        Office: 122H Parker Hall<br>
-        Email: sean.grate@auburn.edu
-      </div>
-      <div class="w3-half">
-        <h3>Mailing Address</h3>
-        <p>
-          Department of Mathematics and Statistics<br>
-          221 Parker Hall<br>
-          Auburn University, AL 36849<br>
-          USA
-        </p>
-      </div>
+  <div class="w3-row-padding">
+    <div class="w3-half">
+      <h3>Contact</h3>
+      Office: 442 Carver Hall<br>
+      Email: sgrate@iastate.edu
     </div>
+    <div class="w3-half">
+      <h3>Mailing Address</h3>
+      <p>
+        Department of Mathematics<br>
+        396 Carver Hall<br>
+        Ames, IA 50011<br>
+        USA
+      </p>
+    </div>
+  </div>
   </footer>
 
   <div class="w3-black w3-center w3-padding-24">
