--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
     <div class="w3-half">
       <h3>Contact</h3>
       Office: 442 Carver Hall<br>
-      Email: sgrate@auburn.edu
+      Email: sgrate@iastate.edu
     </div>
     <div class="w3-half">
       <h3>Mailing Address</h3>
