Fixed email address button

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
   <div class="w3-panel w3-large">
     <a class="weblink" href="https://github.com/seangrate" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-    <a class="weblink" href="mailto:sean.grate@auburn.edu"><i class="fa fa-envelope w3-hover-opacity"></i></a>
+    <a class="weblink" href="mailto:sgrate@iastate.edu"><i class="fa fa-envelope w3-hover-opacity"></i></a>
   </div>
 </nav>
 
