--- a/index.html
+++ b/index.html
@@ -169,6 +169,32 @@
     <div class="w3-container">
     <h4><b>Publications</b></h4>
     <ol reversed>
+      <!-- Education -->
+      <li>
+        <div>
+          <span style="display:inline-block; width:50%">Graph Theoretic Reflection to Foster Alignment in Coordinated Courses</span>
+          <span style="float:right; width:30%"><em>International Journal of Mathematical Education in Science and Technology, to appear</em></span>
+        </div>
+        <br>
+        <span style="display:inline-block; width:50%"><em>
+          Joint with <a class="weblink" href="https://www.hailegilroy.com/" target="_blank">Haile Gilroy</a> 
+          and <a class="weblink" href="https://www.auburn.edu/cosam/faculty/math_stats/lanius/index.htm" target="_blank">Melinda Lanius</a>
+        </em></span>
+        <br>
+        <br>
+        <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="./misc/papers/CAAT.pdf">PDF</a> | 
+        Abstract 
+        <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
+        <blockquote class="abstract-content">
+          Despite online homework’s growing prevalence as a uniform component in coordinated mathematics courses, few studies have considered the connection, or lack thereof, between instructors of record and fixed online homework sets.
+          In this mixed-methods study, we examined how 10 university mathematics educators working in a coordinated setting judged the quality of a sampling of online Calculus I homework assignments.
+          Following an initial review of the homework sets, we introduced the educators to a novel instrument called the Course Alignment Analysis Tool (CAAT), which leverages graph theory to assess the alignment between the learning outcomes that an instructor feels should be prioritised and the learning outcomes most emphasised by an assignment or assessment.
+          We analyzed the impact of engaging with the CAAT on participants’ consideration of uniform homework. We found that in-
+          teracting with the CAAT affected coordinated instructors’ definitions of homework quality and that the CAAT is a promising professional development tool for novice instructors in particular.
+        </blockquote>
+        <br>
+        <br>
+      </li>
       <!-- MatrixSchubert -->
       <li>
         <div>
@@ -282,35 +308,10 @@
         <br>
       </li>
     </ol>
-    <h4><b>Preprints</b></h4>
+    <!-- <h4><b>Preprints</b></h4>
     <ol>
-        <!-- Education -->
-        <li>
-          <div>
-            <span style="display:inline-block; width:50%">Graph Theoretic Reflection to Foster Alignment in Coordinated Courses</span>
-            <span style="float:right; width:30%"><em>Positive referee reports, resubmitted</em></span>
-          </div>
-          <br>
-          <span style="display:inline-block; width:50%"><em>
-            Joint with <a class="weblink" href="https://www.hailegilroy.com/" target="_blank">Haile Gilroy</a> 
-            and <a class="weblink" href="https://www.auburn.edu/cosam/faculty/math_stats/lanius/index.htm" target="_blank">Melinda Lanius</a>
-          </em></span>
-          <br>
-          <br>
-          <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="./misc/papers/CAAT.pdf">PDF</a> | 
-          Abstract 
-          <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
-          <blockquote class="abstract-content">
-            Despite online homework’s growing prevalence as a uniform component in coordinated mathematics courses, few studies have considered the connection, or lack thereof, between instructors of record and fixed online homework sets.
-            In this mixed-methods study, we examined how 10 university mathematics educators working in a coordinated setting judged the quality of a sampling of online Calculus I homework assignments.
-            Following an initial review of the homework sets, we introduced the educators to a novel instrument called the Course Alignment Analysis Tool (CAAT), which leverages graph theory to assess the alignment between the learning outcomes that an instructor feels should be prioritised and the learning outcomes most emphasised by an assignment or assessment.
-            We analyzed the impact of engaging with the CAAT on participants’ consideration of uniform homework. We found that in-
-            teracting with the CAAT affected coordinated instructors’ definitions of homework quality and that the CAAT is a promising professional development tool for novice instructors in particular.
-          </blockquote>
-          <br>
-          <br>
-        </li>    
-    </ol>
+            
+    </ol> -->
     </div>
     <hr>
   </div>
