--- a/travel/condensed.html
+++ b/travel/condensed.html
@@ -54,6 +54,21 @@
     <p>
       <ul>
         <li>
+          KUMUNU 2025
+          <span style="float:right">October 2025</span>
+        </li>
+        <br>
+        <li>
+          AMS Fall Central Sectional Meeting
+          <span style="float:right">October 2025</span>
+        </li>
+        <br>
+        <li>
+          AMS Fall Southeastern Sectional Meeting
+          <span style="float:right">October 2025</span>
+        </li>
+        <br>
+        <li>
           Mathematical Congress of the Americas
           <span style="float:right">July 2025</span>
         </li>
