--- a/travel/index.html
+++ b/travel/index.html
@@ -100,6 +100,21 @@
 <script>
   // timeline data
   const timelineEvents = [
+  { title: 'KUMUNU 2025', 
+    date: new Date(2025, 10), 
+    location: 'University of Missouri-Columbia',
+    city: 'Columbia, MO',
+    extras: { } },
+  { title: 'AMS Fall Central Sectional Meeting', 
+    date: new Date(2025, 10), 
+    location: 'St. Louis University',
+    city: 'St. Louis, MO',
+    extras: { } },
+  { title: 'AMS Fall Southeastern Sectional Meeting', 
+    date: new Date(2025, 10), 
+    location: 'Tulane University',
+    city: 'New Orleans, LA',
+    extras: { } },
   { title: 'Mathematical Congress of the Americas', 
     date: new Date(2025, 7), 
     location: 'University of Miami',
