--- a/talks/condensed.html
+++ b/talks/condensed.html
@@ -56,6 +56,19 @@
   <p>
     <ul>
       <li>
+        <q>Combinatorial bounds on the Castelnuovo-Mumford regularity of toric surfaces</q>, AMS Fall Central Sectional Meeting
+        <span style="float:right">October 2025</span>
+        <br>
+        Abstract
+        <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
+        <blockquote class="abstract-content">
+          In 1996, L'vovsky showed the Castelnuovo-Mumford regularity of the coordinate ring of a monomial curve is bounded by the sum of its semigroup's two largest gaps.
+          We explore analogous results for toric surfaces embedded by incomplete linear systems, and show that for certain classes the regularity is controlled by the combinatorics of the associated semigroup.
+        </blockquote>
+        <br>
+      </li>
+      <br>
+      <li>
         <q>Combinatorial bounds on the Castelnuovo-Mumford regularity of toric surfaces</q>, Mathematical Congress of the Americas
         <span style="float:right">July 2025</span>
         <br>
