--- a/talks/index.html
+++ b/talks/index.html
@@ -101,6 +101,17 @@
     // timeline data
     const timelineEvents = [
     { title: 'Combinatorial bounds on the Castelnuovo-Mumford regularity of toric surfaces', 
+      date: new Date('2025-10-19'), 
+      venue: 'AMS Fall Central Sectional Meeting',
+      location: 'St. Louis University',
+      city: 'St. Louis, MO',
+      extras: { notes: '', 
+                code: '', 
+                slides: '', 
+                video: '',
+                abstract: 'In 1996, L\'vovsky showed the Castelnuovo-Mumford regularity of the coordinate ring of a monomial curve is bounded by the sum of its semigroup\'s two largest gaps. '
+                          + 'We explore analogous results for toric surfaces embedded by incomplete linear systems, and show that for certain classes the regularity is controlled by the combinatorics of the associated semigroup.' } },
+    { title: 'Combinatorial bounds on the Castelnuovo-Mumford regularity of toric surfaces', 
       date: new Date('2025-07-23'), 
       venue: 'Mathematical Congress of the Americas',
       location: 'University of Miami',
