--- a/cocktails/index.html
+++ b/cocktails/index.html
@@ -22,24 +22,32 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
     <h2>Featured Cocktails</h2><br>
     <div class="w3-row-padding w3-padding-16 w3-center" id="featured">
       <div class="w3-quarter">
-        <img src="../../images/cocktails/hurricane.png" alt="Hurricane" style="width:100%">
-        <h3 style="text-align:left">Hurricane</h3>
-        <p><i>Rum, passionfruit, orange, grenadine, lime</i></p>
-      </div>
-      <div class="w3-quarter">
-        <img src="../../images/cocktails/division_bell.webp" alt="Division Bell" style="width:100%">
-        <h3 style="text-align:left">Division Bell</h3>
-        <p><i>mezcal, Aperol, maraschino liqueur, lime</i></p>
+        <img src="../../images/cocktails/corn_n_oil.webp" alt="Corn 'n' Oil" style="width:100%">
+        <h3 style="text-align:left">Corn 'n' Oil</h3>
+        <p><i>blackstrap rum, falernum, lime</i></p>
+        <br>
+        <p>Molasses-y and warm.</p>
       </div>
       <div class="w3-quarter">
         <img src="../../images/cocktails/hibiscus_margarita.jpeg" alt="Hibiscus Margarita" style="width:100%">
         <h3 style="text-align:left">Hibiscus Margarita</h3>
-        <p><i>Blanco tequila, Sorel, lime, agave syrup</i></p>
+        <p><i>blanco tequila, Sorel, lime, agave syrup</i></p>
+        <br>
+        <p>Floral and refreshing.</p>
       </div>
       <div class="w3-quarter">
         <img src="../../images/cocktails/pink_lady.webp" alt="Pink Lady" style="width:100%">
         <h3 style="text-align:left">Pink Lady</h3>
         <p><i>gin, lime, applejack, lemon, grenadine, egg white*</i></p>
+        <br>
+        <p>Silky and fruity.</p>
+      </div>
+      <div class="w3-quarter">
+        <img src="../../images/cocktails/toblerone.webp" alt="Toblerone" style="width:100%">
+        <h3 style="text-align:left">Toblerone</h3>
+        <p><i>Irish cream, hazelnut liqueur, coffee liqueur, heavy cream, honey</i></p>
+        <br>
+        <p>Rich and decadent.</p>
       </div>
     </div>
     <br>
@@ -69,13 +77,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <div class=""w3-container">
     <h2>Wines and Others</h2>
     <div class="w3-row-padding w3-padding-16">
-      <div class="w3-quarter" id="sparkling wines">
+      <!-- <div class="w3-quarter" id="sparkling wines">
         <h3>Sparkling Wines</h3>
         <ul>
           <li>Martinelli's Sparkling Blush (non-alcoholic)</li>
           <li>Martinelli's Sparkling Apple-Cranberry (non-alcoholic)</li>
         </ul>
-      </div>
+      </div> -->
       <div class="w3-quarter" id="sherrys">
         <h3>Sherrys</h3>
         <ul>
