--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       <li>
         <div>
           <span style="display:inline-block; width:50%">Graph Theoretic Reflection to Foster Alignment in Coordinated Courses</span>
-          <span style="float:right; width:30%"><em>International Journal of Mathematical Education in Science and Technology, to appear</em></span>
+          <span style="float:right; width:30%"><em>International Journal of Mathematical Education in Science and Technology, 2025</em></span>
         </div>
         <br>
         <span style="display:inline-block; width:50%"><em>
@@ -199,7 +199,7 @@
       <li>
         <div>
           <span style="display:inline-block; width:50%"><a class="weblink" href="https://arxiv.org/abs/2312.07393" target="_blank">The MatrixSchubert package for Macaulay2</a></span>
-          <span style="float:right; width:30%"><em>Journal of Software for Algebra and Geometry, to appear</em></span>
+          <span style="float:right; width:30%"><em>Journal of Software for Algebra and Geometry, 2025</em></span>
         </div>
         <br>
         <span style="display:inline-block; width:50%"><em>
@@ -237,7 +237,7 @@
           <a class="weblink" href="https://math.galetto.org/" target="_blank">Federico Galetto</a>,
           <a class="weblink" href="https://webgrec.ub.edu/webpages/000006/ang/miro.ub.edu.html" target="_blank">Rosa M. Miró-Roig</a>,
           <a class="weblink" href="https://www.ms.uky.edu/~uwenagel/" target="_blank">Uwe Nagel</a>,
-          <a class="weblink" href="https://www.math.unl.edu/~aseceleanu2/" target="_blank">Alexandra Seceleanu</a>,
+          <a class="weblink" href="https://aseceleanu.github.io/" target="_blank">Alexandra Seceleanu</a>,
           and Junzo Watanabe
         </em></span>
         <br>
@@ -255,7 +255,7 @@
         <br>
         <br>
       </li>
-      <!-- WLP -->
+      <!-- Betti WLP -->
       <li>
         <div>
           <span style="display:inline-block; width:50%"><a class="weblink" href="https://arxiv.org/abs/2307.13126" target="_blank">Betti tables forcing failure of the Weak Lefschetz Property</a></span>
