--- a/talks/condensed.html
+++ b/talks/condensed.html
@@ -59,6 +59,7 @@
         <q>Combinatorial bounds on the Castelnuovo-Mumford regularity of toric surfaces</q>, AMS Fall Central Sectional Meeting
         <span style="float:right">October 2025</span>
         <br>
+        <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="../misc/slides/ams-central-f25/regularity.pdf" target="_blank">Slides</a> | 
         Abstract
         <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
         <blockquote class="abstract-content">
@@ -125,10 +126,10 @@
       </li>
       <br>
       <li>
-        <q>Castelnuovo-Mumford regularity of toric surfaces</q>, AMS Fall Central Sectional
+        <q>Castelnuovo-Mumford regularity of toric surfaces</q>, AMS Fall Central Sectional Meeting
         <span style="float:right">September 2024</span>
         <br>
-        <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="../misc/slides/ams-central/presentation.html" target="_blank">Slides</a> | 
+        <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="../misc/slides/ams-central-f24/presentation.html" target="_blank">Slides</a> | 
         Abstract 
         <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
         <blockquote class="abstract-content">
@@ -279,6 +280,40 @@
           I'll discuss two interesting properties of Artinian rings—the Lefschetz property (which is about the behavior of multiplication in the ring), and free resolutions, which come about from doing "linear algebra with matrices of polynomials".
         </blockquote>
         <br>
+      </li>
+      <br>
+      <li>
+        Iowa State University
+        <ul>
+          <li>
+            <q>The stable Tamari lattice</q>, Discrete Math Seminar
+            <span style="float:right">November 2025</span>
+            <br>
+            Abstract 
+            <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
+            <blockquote class="abstract-content">
+              The stable Tamari lattice was introduced by Haiman through the lens of invariant polynomials, extended by Bergeron-Preville-Ratelle, and is a variation of the Tamari lattice. 
+              Stemming from the AMS MRC: Algebraic Combinatorics this past summer, I will describe some work in progress joint with Anna Pun, Herman Chau, Spencer Daugherty, and Juan Carlos Martínez Mori where we describe the combinatorics of this lattice. 
+              Namely, I will present properties of the lower order ideals of this lattice, the cover relations, and some enumeration problems we are tackling. 
+              I will discuss this data through some examples and Python code.
+            </blockquote>
+          </li>
+          <br>
+          <li>
+            <q>Betti tables and Lefschetz properties</q>, Algebra and Geometry Seminar
+            <span style="float:right">October 2025</span>
+            <br>
+            Abstract 
+            <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
+            <blockquote class="abstract-content">
+              For most rings, a lot of the data of the ring can be captured via its (minimal) free resolution.
+              This can then be summarized with a Betti table which, in some sense, describes the complexity of the ring.
+              If such a ring is also Artinian, the ring is said to have the weak Lefschetz property (WLP) if multiplication by some linear form is always full rank.
+              Although Lefschetz properties are of interest to algebraists, many combinatorialists like to leverage constructions of Artinian algebras with the WLP to prove results about, for instance, log-concavity of sequences.
+              Joint with Hal Schenck, we show that if the Betti table of an Artinian algebra has a certain substructure resembling a Koszul complex, then the Artinian algebra cannot have the WLP.
+            </blockquote>
+          </li>
+        </ul>
       </li>
       <br>
       <li>
