--- a/talks/index.html
+++ b/talks/index.html
@@ -107,7 +107,7 @@
       city: 'St. Louis, MO',
       extras: { notes: '', 
                 code: '', 
-                slides: '', 
+                slides: '../misc/slides/ams-central-f25/regularity.pdf', 
                 video: '',
                 abstract: 'In 1996, L\'vovsky showed the Castelnuovo-Mumford regularity of the coordinate ring of a monomial curve is bounded by the sum of its semigroup\'s two largest gaps. '
                           + 'We explore analogous results for toric surfaces embedded by incomplete linear systems, and show that for certain classes the regularity is controlled by the combinatorics of the associated semigroup.' } },
@@ -248,7 +248,7 @@
       city: 'San Antonio, TX',
       extras: { notes: '', 
                 code: '', 
-                slides: '../misc/slides/ams-central/presentation.html', 
+                slides: '../misc/slides/ams-central-f24/presentation.html', 
                 video: '',
                 abstract: 'In 1996, L\'vovsky showed the Castelnuovo-Mumford regularity of the coordinate ring of a monomial curve is bounded by the sum of its semigroup\'s two largest gaps. '
                           + 'We explore analogous results for toric surfaces embedded by incomplete linear systems, and show that for certain classes the regularity is controlled by the combinatorics of the associated semigroup, and is bounded by the area of the associated polygon.' } },
