--- a/teaching/index.html
+++ b/teaching/index.html
@@ -52,7 +52,26 @@
     <h4 id="auburn"><b>Auburn University</b></h4>
     <div class="w3-container">
         <p>
-          I am a graduate teaching assistant (GTA) at Auburn University.
+          I am a postdoc at Iowa State University.
+          The covered material can be found <a href="https://catalog.iastate.edu/azcourses/math/" class="weblink" target="_blank">here</a>.
+        </p>
+        <ul>
+        <li>
+          <p>
+            <b>(Spring 2026)</b> Instructor for two sections of MATH 2070 Matrices and Linear Algebra.
+          </p>
+        </li>
+        <li>
+          <p>
+            <b>(Fall 2025)</b> Recitation leader for six sections of MATH 1660 Calculus II.
+          </p>
+        </li>
+      </ul>
+    </div> 
+    <h4 id="auburn"><b>Auburn University</b></h4>
+    <div class="w3-container">
+        <p>
+          I was a graduate teaching assistant (GTA) at Auburn University.
           Starting in Fall 2022, the department switched to almost all GTAs teaching recitations.
           The covered material can be found <a href="https://bulletin.auburn.edu/coursesofinstruction/math/" class="weblink" target="_blank">here</a>.
         </p>
